# tiedonpakkaus_tiralabra_s-2021

./: .coveragerc  .env  .env.test  .gitignore  README.md  huffman_coding.py  huffman_node.py  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  määrittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viikko6.md
files/: text.txt  text2.txt  text3.txt  text4.txt  text5.txt
src/: config.py  huffman_coding.py  huffman_node.py  index.py  lz77.py
src/tests/: huffman_coding_test.py  huffman_node_test.py  lz77_test.py
