[tool.poetry]
name = "tiedonpakkaus_tiralabra_s-2021"
version = "0.1.0"
description = ""
authors = ["Akihiro Tanaka <akihiro.fin@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
